exports[`(.not).toHaveConflictStatus > using axios > .not.toHaveConflictStatus > fails when response have status code 409 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveConflictStatus()</intensity>

Expected status code to not be 409 received:
  <red>409</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 409,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveConflictStatus > using axios > .toHaveConflictStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveConflictStatus()</intensity>

Expected status code to be 409 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
